<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button2"
        android:layout_centerInParent="true"
        android:text="@string/take_a_photo"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/load_from_gallery"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="370sp"
        android:layout_height="370sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:id="@+id/classified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/classification"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="#C30000"
        android:textStyle="bold"
        android:textSize="27sp"
        android:id="@+id/result"
        android:layout_below="@+id/classified"
        />

    <Button
        android:id="@+id/classifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="158dp"
        android:layout_marginTop="553dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="34dp"
        android:text="Predykcja" />

</RelativeLayout>